--- a/src/styles/InputField.module.css
+++ b/src/styles/InputField.module.css
@@ -1,6 +1,17 @@
 .inputField {
+    width: 100%;
     height: 10%;
     max-height: 10%;
-    background-color: white;
+    padding: 10px;
+
+}
+
+.inputBox {
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(52, 52, 52);
+    border-radius: 10px
 }
